--- a/calc.css
+++ b/calc.css
@@ -1,6 +1,8 @@
+body{
+    background-color: navajowhite;
+}
 #clockContainer{
     position: relative;
-    border: 2px solid black;
     height: 40vw;
     width: 40vw;
     background: url(clock.png) no-repeat;
